triviagame/force-app/main/default/objects/Trivia_Game__c/Trivia_Game__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game</description>
    <label>Trivia Game</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>