triviagame/force-app/main/default/objects/Trivia_Game__c/fields/Current_Question__c.field-meta.xml
<CustomField>
    <fullName>Current_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Trivia Multiplayer Game: reference to the current question on the screen</description>
    <inlineHelpText>reference to the current question on the screen</inlineHelpText>
    <label>Current Question</label>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipLabel>Trivia Games</relationshipLabel>
    <relationshipName>Trivia_Games</relationshipName>
    <type>Lookup</type>
</CustomField>