triviagame/force-app/main/default/objects/Trivia_Game__c/fields/Game_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Game_Identifier__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Unique identifier amongst all the new, live or paused games.</description>
    <inlineHelpText>Unique identifier amongst all the new, live or paused games.</inlineHelpText>
    <label>Game Identifier</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>