triviagame/force-app/main/default/objects/Trivia_Game__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <description>Salesforce Trivia Multiplayer Game : total number of questions</description>
    <inlineHelpText>total number of questions</inlineHelpText>
    <label>Number of Questions</label>
    <summaryForeignKey>Trivia_Game_Question__c.Trivia_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>